@@ -1,6 +1,7 @@
 ncmpc 0.40 - not yet released
 * fix crash when range selection includes ".."
 * another jumping cursor fix for large scroll-offset values
+* show elapsed time of streams
 
 ncmpc 0.39 - (2020-08-21)
 * library page: skip tags when there is only one value
